# test2

./: .gitignore  Cargo.toml  build.rs
proto/common/: heartbeat.proto  query.proto
proto/test2/: oauth.proto
src/: main.rs
